# mlir-as-python

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: static-analysis.yaml  unit-tests.yaml
src/mlir/: context.py
src/mlir/ir/: blocks.py  module.py  operations.py  regions.py  value.py
src/mlir/ir/attributes/: __init__.py  base.py  numbers.py
src/mlir/ir/traits/: base.py  operands.py  regions.py  results.py  symbols.py  terminator.py
src/mlir/ir/types/: __init__.py  base.py  numbers.py
src/mlir/utils/: validator.py
tests/ir/: test_blocks.py  test_module.py  test_operations.py  test_region.py  test_value.py
tests/ir/attributes/: test_base.py
tests/ir/traits/: test_base.py  test_operands.py  test_regions.py  test_results.py
tests/ir/types/: test_base.py  test_numbers.py
tests/utils/: test_validator.py
