[project]
name = "mlir"
version = "0.1.0"
description = ""
authors = [
    {name = "alsoblank",email = "luke.causer@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "mlir", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
